# commandex

./: DISCLAIMER.md  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
commandex/: __init__.py  commander.py  commandpack.py  executors.py  factories.py  filters.py  maker.py  makers.py  parsers.py
requirements/: requirements-dev.txt  requirements-test.txt
tests/: __init__.py  conftest.py  test_commandpack.py  test_executors.py  test_factories.py  test_filters.py  test_maker.py  test_makers.py  test_parsers.py
