[metadata]
name = commandex
version = attr: commandex.__version__
author = A.A. Suvorov
author_email = smartlegiondev@gmail.com
description = A cross-platform library for creation, storage, management of commands and command packages. Execution of commands, parsing of files with command packages.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smartlegionlab/commandex/
project_urls =
    Documentation = https://github.com/smartlegionlab/commandex/blob/master/README.md
    Release notes = https://github.com/smartlegionlab/commandex/releases
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    commandex
    smartlegionlab
    commandman
    command executor

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false
install_requires =

[coverage:run]
omit =
    tests/*
    venv/*
    .pytest_cache
    *__init__.py